--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ qrcode = "0.12.0"
 image = "0.23.14"
 base64 = "0.13.0"
 more-asserts = "0.3.0"
+serde =  { version = "1.0.144", features = ["derive"] }
